--- a/BlueCanvasOut.html
+++ b/BlueCanvasOut.html
@@ -9,7 +9,7 @@
 
 </style>
 
-<script src="https://pathaksushil1983-dev-ed.my.site.com/lightning/lightning.out.js"></script>
+<script src="https://pathaksushil1983-dev-ed.my.site.com/customer/lightning/lightning.out.js"></script>
 
 <div data-lightning-out="true"></div>
 
@@ -17,7 +17,7 @@
 
     const appName = 'c:OptOutFormWrapper';
     const componentName = 'c:optoutForm';
-    const lightningEndpoint = 'https://pathaksushil1983-dev-ed.my.site.com';
+    const lightningEndpoint = 'https://pathaksushil1983-dev-ed.my.site.com/customer';
     const targetElement = document.querySelector("[data-lightning-out]");
     const componentAttributes = {
 
